actualice el link de linkedin

--- a/hv/index.html
+++ b/hv/index.html
@@ -66,13 +66,7 @@
                     <div>
                         <ul style="padding: 0%;margin-top: 12px;">
                             <li style="margin-top: 16px;">
-                                <a href="#" target="_blank">Gitlab</a>
-                            </li>
-                            <li style="margin-top: 16px;">
-                                <a href="#" target="_blank">Twiter</a>
-                            </li>
-                            <li style="margin-top: 16px;">
-                                <a href="#" target="_blank">Linkedin</a>
+                                <a href="https://www.linkedin.com/in/fabian-manrique870ba190/" target="_blank">Linkedin</a>
                             </li>
                         </ul>
                     </div>
