--- a/Barberia Alura/index.html
+++ b/Barberia Alura/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Barbería Alura</title>
     <link rel="stylesheet" href="../Assets/Css/reset.css">
     <link rel="stylesheet" href="./Assets/Css/Style.css">
@@ -15,19 +16,20 @@
     <header>
         <div class="posicionamientomenu">
             <h1> <img src="../Assets/images/logo.png"> </h1>
-        <nav>
-            <ul>
-                <li> <a href="../index.html">Home</a></li>
-                <li> <a href="./Productos/productos.html">productos</a></li>
-                <li> <a href="./Productos/Contactos.html">Contactos</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li> <a href="../index.html">Home</a></li>
+                    <li> <a href="./Productos/productos.html">productos</a></li>
+                    <li> <a href="./Productos/Contactos.html">Contactos</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
         <img class="banner" src="./Assets/images/banner.jpg">
 
-    <main>
+    <main class="main-index">
+
         <section class="principal">   
             <h2 class="titulo-principal">La Barbería Alura</h2> 
             
@@ -43,19 +45,32 @@
         <section class="mapa">
             <h3 class="titulo-principal">Nuestra Ubicación</h3>
             <p>Nuestra barbería esta ubicada en el corazón de Cali Colombia</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127450.10996443902!2d-76.60806597943767!3d3.3950608970701794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a6af05707fc1%3A0xd083a753c7398fb8!2sCentro%20Comercial%20Palmetto%20Plaza!5e0!3m2!1ses!2sco!4v1683823207578!5m2!1ses!2sco" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <div class="mapa-contenido">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127450.10996443902!2d-76.60806597943767!3d3.3950608970701794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a6af05707fc1%3A0xd083a753c7398fb8!2sCentro%20Comercial%20Palmetto%20Plaza!5e0!3m2!1ses!2sco!4v1683823207578!5m2!1ses!2sco" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </div>
+
         </section>
 
 
         <section class="diferenciales">
             <h3 class="titulo-principal">Diferenciales</h3>
-            <ul>
+            <ul class="lista">
                 <li class="item">Especializada a clientes</li> 
                 <li class="item">Espacio diferenciado</li>
                 <li class="item">Localizacion</li>
                 <li class="item">Contamos con profesionales especializados</li>
+                <li class="item">Puntualidad</li>
+                <li class="item">Limpieza</li>
             </ul>
+
             <img src="./Assets/images/diferenciales.jpg" class="diferencial">
+
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
         </section>  
         
     </main>
